# Izumi

./: .env  README.md  main.py  pyproject.toml
Izumi-Bot/izumi-bot/: README.md
Izumi-Bot/lib/bot/: __init__.py
Izumi-Bot/lib/commands/: action.py  anime.py  fun.py  general.py  giveaway.py  image.py  mod.py
Izumi-Bot/lib/util/: actions.py  animeinfo.py  cmd.py  funtions.py  general_questions.py  images.py  jokes.py  keep_alive.py  nekosearches.py  quotes.py  reactions.py  statuses.py
